--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@babel/register": "^7.9.0",
+    "@koa/cors": "^3.0.0",
+    "cors": "^2.8.5",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
     "koa-router": "^8.0.8",
     "nodemon": "^2.0.3"
