--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
     "koa-router": "^8.0.8",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "pg": "^8.0.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.7"
   }
 }
