--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
     "koa-router": "^8.0.8",
+    "lodash": "^4.17.15",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
